--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "app.h": "c",
         "stm32f4_header.h": "c",
-        "stm32f4xx_ll_tim.h": "c"
+        "stm32f4xx_ll_tim.h": "c",
+        "stdlib.h": "c",
+        "impedance_task.h": "c",
+        "pid_task.h": "c"
     }
 }
